# AnswerAI

./: .gitignore  LICENSE  README.md  insert_docstrings.py  update_docs.py
backend/: .env.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d9f8a1b7c2e_add_username_to_users.py  947b15f79c58_initial_schema.py  b18c2d4e9f01_remove_knowledge_points_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: ai.py  auth.py  meta.py  reports.py  student.py  teacher.py  upload.py  ws.py
backend/app/core/: config.py  response.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: academic.py  base.py  exam.py  question.py  user.py
backend/app/schemas/: ai.py  auth.py  meta.py  student.py  teacher.py
backend/app/services/: ai_client.py  learning.py  llm.py  prompt_loader.py  realtime.py  reports.py  scoring.py  student_growth_ai.py  tasks.py
backend/prompts/: question_generate_system.jinja  question_generate_user.jinja  student_follow_up_system.jinja  student_follow_up_user.jinja  student_growth_refine_system.jinja  student_growth_refine_user.jinja
backend/scripts/: deploy.ps1  deploy.sh  run.ps1  run.sh  simulate_mass_exam_completion.py
docs/: api.md  database.md  frontend.md
docs/api/: auth-meta.md  index.md  student.md  support.md  teacher-classes-questions.md  teacher-exams-review.md
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: auth.ts  feedback.ts  meta.ts  (+2 more)
(+51 files in other folders)
